# rag-fundamentals

./: .gitignore  pyproject.toml  requirements.txt  typesense.ipynb
data/vector_store/01db0f79-916b-4603-b126-2106b8a50277/: index_metadata.pickle
notebook/: document.ipynb  pdf_loader.ipynb
